first commit for making sure the project is connected to github

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <div class="text-4xl text-blue-300"> hello</div>
+  <div class="text-4xl black bg-amber-200"> hello world</div>
 </body>
 </html>
