made menu popup in nav

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <div class="grid grid-cols-1 gap-y-3 ">
       <a class="text-base font-sans font-medium text-gray-600" href="">About</a>
       <a class="text-base font-sans font-medium text-gray-600" href="">Recent work</a>
-      <button class="text-white bg-orange-400 w-34 h-9 rounded-3xl">Work with me?</button>
+      <button class="text-white bg-orange-400 w-34 h-9 rounded-3xl hover:cursor-pointer">Work with me?</button>
     </div>
     
   </div>
