about section done fully responsive

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,27 @@
   
 
 
+  <!--main div-->
+  <div class="flex justify-center items-center mb-20">
+    <!--content div-->
+    <div class="max-w-110 sm:max-w-124 md:max-w-170 lg:min-w-250 grid grid-cols-1 justify-items-center gap-y-10 ">
 
+      <!--about me txt-->
+      <div class="text-2xl font-sans font-bold tracking-widest">About me</div>
+
+      <!--about txt & image-->
+      <div class="grid grid-cols-1 gap-y-14 justify-items-center lg:grid-cols-2 ">
+        <div class="text-lg font-sans sm:text-xl md:text-3xl lg:text-[23px] md:leading-10 lg:leading-9 lg:min-w-130  tracking-wider lg:ml-6">Hey! I'm Sharjeel Aslam, a Computer Science graduate passionate about building beautiful and responsive websites. I'm currently focusing on frontend development and love working with modern tools like HTML, Tailwind CSS, and JavaScript. I enjoy turning ideas into smooth, user-friendly experiences on the web. My goal is to grow into a full-stack web developer as I continue learning and improving every day.</div>
+        <img class=" max-h-90 sm:max-h-100 md:max-h-130 lg:max-h-110 max-w-110 md:min-w-124 lg:min-w-110 lg:ml-6" src="about me pic.jpeg" alt="">
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+  
 
 
 
