--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     <div class="max-w-110 sm:max-w-124 md:max-w-170 lg:min-w-250 grid grid-cols-1 justify-items-center gap-y-10 ">
 
       <!--about me txt-->
-      <div class="text-2xl font-sans font-bold tracking-widest">About me</div>
+      <div class="text-2xl font-sans font-bold tracking-widest lg:text-[27px]">About me</div>
 
       <!--about txt & image-->
       <div class="grid grid-cols-1 gap-y-14 justify-items-center lg:grid-cols-2 ">
@@ -82,9 +82,26 @@
     </div>
   </div>
 
+  <div class="w-full grid grid-cols-1 gap-y-10 lg:grid-cols-2 lg:gap-x-12   p-5  mb-30">
+  <img 
+    src="bannnner.jpeg" 
+    alt="Responsive" 
+    class="w-full  object-cover "
+  >
+
+  <img 
+    src="bannnner.jpeg" 
+    alt="Responsive" 
+    class="w-full  object-cover "
+  >
+</div>
 
 
   
+
+
+
+
 
 
 
