--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
 
   <div class="flex justify-center items-center mb-10">
     
-    <div class="text-blue-500 text-[40px] font-sans font-semibold underline underline-offset-6  ">Contact me</div>
+    <div class="text-blue-500 text-[40px] md:text-3xl font-sans font-semibold underline underline-offset-6  ">Contact me</div>
     
   </div>
 
@@ -242,6 +242,38 @@
 
     </div>
   </div>
+
+
+
+  <!--footer-->
+
+  
+
+
+
+
+  <div class="bg-blue-800 w-full h-14 flex justify-center items-center ">
+    <div class="flex gap-x-3">
+
+      <div class="text-base text-white font-sans">Sharjeel Aslam</div>
+
+      <div class="flex gap-x-3">
+
+        <div>
+          <svg class="text-white mt-1" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-copyright-icon lucide-copyright"><circle cx="12" cy="12" r="10"/><path d="M14.83 14.83a4 4 0 1 1 0-5.66"/></svg>
+        </div>
+
+        <div class="text-base text-white font-sans">2025 All rights reserved</div>
+
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
 
 
 
